--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+<!DOCTYPE html>
 <html lang="en">
-<head></head>
-<body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interactive D3 Charts</title>
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+</head>
+<body>
+  <main class="slider">
+    <button class="slide-btn prev">‹</button>
+
+    <article class="slides">
+      <section class="slide" id="chart1"></section>
+      <section class="slide" id="chart2"></section>
+      <section class="slide" id="chart3"></section>
+    </article>
+
+    <button class="slide-btn next">›</button>
+  </main>
+
+  <script src="scripts/scripts.js"></script>
+  <script src="scripts/chart1.js"></script>
+</body>
 </html>
