--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive D3 Charts</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <title>Interactive D3 Charts</title>  <link rel="stylesheet" href="styles/styles.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
-<body>
+<body>  
+  <section class="filters-container">
+    <div class="filter-dropdown">
+      <button class="filter-btn">
+        Age Groups
+        <span>&#9660;</span>
+      </button>
+
+      <div class="dropdown-content" id="ageGroupFilter"></div>
+    </div>
+
+    <div class="filter-dropdown">
+      <button class="filter-btn">
+        Detection Methods 
+        <span>&#9660;</span>
+      </button>
+
+      <div class="dropdown-content" id="detectionMethodFilter"></div>
+    </div>
+
+    <div class="filter-dropdown">
+      <button class="filter-btn">
+        Jurisdictions 
+        <span>&#9660;</span>
+      </button>
+
+      <div class="dropdown-content" id="jurisdictionFilter"></div>
+    </div>
+  </section>
+
   <main class="slider">
     <button class="slide-btn prev">‹</button>
 
