--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="filter-dropdown">
       <button class="filter-btn">
         Age Groups
+
         <span>&#9660;</span>
       </button>
 
@@ -20,6 +21,7 @@
     <div class="filter-dropdown">
       <button class="filter-btn">
         Detection Methods 
+
         <span>&#9660;</span>
       </button>
 
@@ -29,6 +31,7 @@
     <div class="filter-dropdown">
       <button class="filter-btn">
         Jurisdictions 
+
         <span>&#9660;</span>
       </button>
 
@@ -41,8 +44,8 @@
 
     <article class="slides">
       <section class="slide" id="chart1"></section>
-      <section class="slide" id="chart2"></section>
-      <section class="slide" id="chart3"></section>
+      <section class="slide" id="chart2" style="color: black;">2</section>
+      <section class="slide" id="chart3" style="color: black;">3</section>
     </article>
 
     <button class="slide-btn next">›</button>
