--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <article class="slides">
       <section class="slide" id="chart1"></section>
-      <section class="slide" id="chart2" style="color: black;">2</section>
-      <section class="slide" id="chart3" style="color: black;">3</section>
+      <section class="slide" id="chart2" style="color: black;"><h1>2</h1></section>
+      <section class="slide" id="chart3" style="color: black;"><h1>3</h1></section>
     </article>
 
     <button class="slide-btn next">›</button>
