--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <article class="slides">
       <section class="slide" id="chart1"></section>
-      <section class="slide" id="chart2" style="color: black;"><h1>2</h1></section>
+      <section class="slide" id="chart2"></section>
       <section class="slide" id="chart3" style="color: black;"><h1>3</h1></section>
     </article>
 
@@ -52,6 +52,8 @@
   </main>
 
   <script src="scripts/scripts.js"></script>
+  <script src="scripts/constants.js"></script>
   <script src="scripts/chart1.js"></script>
+  <script src="scripts/chart2.js"></script>
 </body>
 </html>
