Your commit message here

--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@
 </head>
 
 <body>
-    <section class="filters-container">
-        <div class="filter-dropdown">
-            <button class="filter-btn">
+
+    <header>
+        <h1>Fines For Mobile Phone Use 2023</h1>
+    </header>
+    <nav>
+        <section class="filters-container">
+            <div class="filter-dropdown">
+                <button class="filter-btn">
         Age Groups 1
 
         <span>&#9660;</span>
       </button>
 
-            <div class="dropdown-content" id="ageGroupFilter"></div>
-        </div>
+                <div class="dropdown-content" id="ageGroupFilter"></div>
+            </div>
 
-        <div class="filter-dropdown">
-            <button class="filter-btn">
+            <div class="filter-dropdown">
+                <button class="filter-btn">
         Detection Methods 
 
         <span>&#9660;</span>
       </button>
 
-            <div class="dropdown-content" id="detectionMethodFilter"></div>
-        </div>
+                <div class="dropdown-content" id="detectionMethodFilter"></div>
+            </div>
 
-        <div class="filter-dropdown">
-            <button class="filter-btn">
+            <div class="filter-dropdown">
+                <button class="filter-btn">
         Jurisdictions 
 
         <span>&#9660;</span>
       </button>
 
-            <div class="dropdown-content" id="jurisdictionFilter"></div>
-        </div>
-    </section>
+                <div class="dropdown-content" id="jurisdictionFilter"></div>
+            </div>
+        </section>
+    </nav>
 
     <main class="slider">
         <button class="slide-btn prev">‹</button>
@@ -60,6 +66,7 @@
     <script src="scripts/constants.js"></script>
     <script src="scripts/chart1.js"></script>
     <script src="scripts/chart2.js"></script>
+    <footer>@Data Visulisation 2023 </footer>
 </body>
 
 </html>
