Your commit message here

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="filters-container">
             <div class="filter-dropdown">
                 <button class="filter-btn">
-        Age Groups 1
+        Age Groups
 
         <span>&#9660;</span>
       </button>
@@ -66,7 +66,7 @@
     <script src="scripts/constants.js"></script>
     <script src="scripts/chart1.js"></script>
     <script src="scripts/chart2.js"></script>
-    <footer>@Data Visulisation 2023 </footer>
+    <footer>@Data Visulisation</footer>
 </body>
 
 </html>
