bubble chart init

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <button class="slide-btn prev">‹</button>
 
     <article class="slides">
+      <section class="slide" id="chart3"></section>
       <section class="slide" id="chart1"></section>
       <section class="slide" id="chart2"></section>
-      <section class="slide" id="chart3" style="color: black;"><h1>3</h1></section>
     </article>
 
     <button class="slide-btn next">›</button>
@@ -55,5 +55,6 @@
   <script src="scripts/constants.js"></script>
   <script src="scripts/chart1.js"></script>
   <script src="scripts/chart2.js"></script>
+  <script src="scripts/chart3.js"></script>
 </body>
 </html>
