renaming chart files

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
   <script src="scripts/scripts.js"></script>
   <script src="scripts/constants.js"></script>
-  <script src="scripts/chart1.js"></script>
-  <script src="scripts/chart2.js"></script>
-  <script src="scripts/chart3.js"></script>
+  <script src="scripts/StackedBarChart.js"></script>
+  <script src="scripts/HeatMap.js"></script>
+  <script src="scripts/BubbleChart.js"></script>
 </body>
 
 </html>
