moving chart files to charts folder

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
   <script src="scripts/scripts.js"></script>
   <script src="scripts/constants.js"></script>
-  <script src="scripts/StackedBarChart.js"></script>
-  <script src="scripts/HeatMap.js"></script>
-  <script src="scripts/BubbleChart.js"></script>
+  <script src="charts/StackedBarChart.js"></script>
+  <script src="charts/HeatMap.js"></script>
+  <script src="charts/BubbleChart.js"></script>
 </body>
 
 </html>
