changed nav names

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </a>
 
       <a href="charts/HeatMap/HeatMap.html">
-        Heatmap Chart
+        Heat Map
       </a>
 
       <a href="charts/BubbleChart/BubbleChart.html">
