--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -13,7 +13,7 @@
     <nav class="main-nav">
       <a href="../../index.html">Home Page</a>
       <a href="../StackedBarChart/StackedBarChart.html">Stacked Bar Chart</a>
-      <a href="../HeatMap/HeatMap.html">Heatmap Chart</a>
+      <a href="../HeatMap/HeatMap.html">Heat Map</a>
     </nav>
   </header>
 
