--- a/charts/StackedBarChart/StackedBarChart.html
+++ b/charts/StackedBarChart/StackedBarChart.html
@@ -12,7 +12,7 @@
     <h1>Fines For Mobile Phone Use 2023</h1>
     <nav class="main-nav">
       <a href="../../index.html">Home Page</a>
-      <a href="../HeatMap/HeatMap.html">Heatmap Chart</a>
+      <a href="../HeatMap/HeatMap.html">Heat Map</a>
       <a href="../BubbleChart/BubbleChart.html">Bubble Chart</a>
     </nav>
   </header>
