--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
   </header>
 
   <main class="main-content-area">
-    <h2>Welcome!</h2>
-    <p>Please select a chart from the navigation menu above to view the visualizations.</p>
+    <h2>Welcome to the Australian Mobile Phone Usage While Driving Dashboard</h2>
+    <p>This dashboard provides comprehensive information on Australian drivers caught using their mobile phones in 2023. Through interactive visualizations, we explore key patterns and correlations in the data.</p>
+    
+    <h3>Key Insights You Can Explore:</h3>
+    <ul>
+      <li>Compare the prevalence of camera-issued versus police-issued fines across different jurisdictions</li>
+      <li>Analyze the total number of fines issued per jurisdiction throughout 2023</li>
+      <li>Investigate the relationship between road deaths and fines issued in each jurisdiction</li>
+    </ul>
+    
+    <p>Select a visualization from the navigation menu above to begin exploring the data.</p>
   </main>
   
   <footer>@Data Visulisation</footer>
