story board for heat map and fix using all filters simultaneously

--- a/charts/StackedBarChart/StackedBarChart.html
+++ b/charts/StackedBarChart/StackedBarChart.html
@@ -41,6 +41,19 @@
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
+
+    <section class="chart-description">
+      <h2>Stacked Bar Charts: Fines by Detection Method</h2>
+      <p>These two stacked bar graphs compare the number of fines issued per jurisdiction, broken down by detection method (camera-issued or police-issued). The visualization helps identify patterns in how different jurisdictions enforce mobile phone usage laws.</p>
+      
+      <h3>How to Use the Filters:</h3>
+      <ul>
+        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
+        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
+        <li><strong>Jurisdictions:</strong> Select specific states or territories to compare</li>
+      </ul>
+      <p>Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+    </section>
   </main>
 
   <script src="../../scripts/constants.js"></script>
