--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -35,6 +35,26 @@
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
+
+    <section class="chart-description">
+      <h2>Bubble Chart: Fines vs Road Deaths</h2>
+      <p>This chart illustrates the relationship between the total number of fines issued per jurisdiction and road deaths. The bubble size represents the number of fines per 10,000 licensed drivers in each jurisdiction, providing a normalized view of enforcement intensity relative to the driving population.</p>
+      
+      <h3>How to Read the Chart:</h3>
+      <ul>
+        <li><strong>X-axis:</strong> Number of road deaths in each jurisdiction</li>
+        <li><strong>Y-axis:</strong> Total number of fines issued</li>
+        <li><strong>Bubble Size:</strong> Represents fines per 10,000 licensed drivers</li>
+        <li><strong>Bubble Color:</strong> Different colors represent different jurisdictions</li>
+      </ul>
+
+      <h3>How to Use the Filters:</h3>
+      <ul>
+        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
+        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
+      </ul>
+      <p>Hover over any bubble to see detailed information about the jurisdiction, including road deaths, total fines, number of licenses, and fines per 10,000 drivers. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+    </section>
   </main>
 
   <script src="../../scripts/constants.js"></script>
