--- a/charts/HeatMap/HeatMap.html
+++ b/charts/HeatMap/HeatMap.html
@@ -47,6 +47,20 @@
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
+
+    <section class="chart-description">
+      <h2>Heat Map: Monthly Fines Distribution</h2>
+      <p>This heat map displays the total number of fines issued per jurisdiction, by month, throughout 2023. The intensity of the color indicates the number of fines issued, with darker shades representing higher numbers. This visualization helps identify seasonal patterns and compare enforcement levels across different jurisdictions.</p>
+      
+      <h3>How to Use the Filters:</h3>
+      <ul>
+        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
+        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
+        <li><strong>Jurisdictions:</strong> Select specific states or territories to compare</li>
+        <li><strong>Months:</strong> Focus on particular months or seasonal patterns</li>
+      </ul>
+      <p>Hover over any cell to see detailed information about the number of fines issued. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+    </section>
   </main>
 
   <script src="../../scripts/constants.js"></script>
