active nav bar and story board

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <header>
     <h1>Fines For Mobile Phone Use 2023</h1>
     <nav class="main-nav">
+      <a href="index.html" class="active">Home Page</a>
+      
       <a href="charts/StackedBarChart/StackedBarChart.html">
         Stacked Bar Chart
       </a>
