--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -14,6 +14,7 @@
       <a href="../../index.html">Home Page</a>
       <a href="../StackedBarChart/StackedBarChart.html">Stacked Bar Chart</a>
       <a href="../HeatMap/HeatMap.html">Heat Map</a>
+      <a href="../BubbleChart/BubbleChart.html" class="active">Bubble Chart</a>
     </nav>
   </header>
 
@@ -54,6 +55,17 @@
         <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
       </ul>
       <p>Hover over any bubble to see detailed information about the jurisdiction, including road deaths, total fines, number of licenses, and fines per 10,000 drivers. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+      
+      <section class="bubblechart-storyboard">
+        <h3>Key Insights from the Bubble Chart</h3>
+        <ul>
+          <li><strong>NSW: High Fines per Driver and High Road Deaths:</strong> NSW (New South Wales) stands out with the largest bubble, indicating the highest number of fines per 10,000 licenses. It also has a high number of road deaths, suggesting both strict enforcement and a significant road safety challenge.</li>
+          <li><strong>QLD and VIC: Many Road Deaths, Moderate Fines per Driver:</strong> Queensland (QLD) and Victoria (VIC) have high numbers of road deaths, but their bubble sizes are smaller than NSW, meaning they issue fewer fines per 10,000 licenses. This could indicate less strict enforcement or different driver behavior.</li>
+          <li><strong>Other States and Territories: Low Fines per Driver and Fewer Road Deaths:</strong> ACT, NT, SA, TAS, and WA have much smaller bubbles, reflecting both fewer road deaths and a lower rate of fines per 10,000 licenses. These regions may have smaller populations, less enforcement, or different reporting practices.</li>
+          <li><strong>No Direct Correlation:</strong> The chart does not show a direct relationship between road deaths and fines per 10,000 licenses. For example, QLD and VIC have similar road death numbers, but QLD has a slightly larger bubble, indicating a higher fine rate per driver.</li>
+          <li><strong>Bubble Size Interpretation:</strong> The size of each bubble is crucial: it normalizes fines by the number of licensed drivers, allowing for fairer comparison between jurisdictions of different sizes.</li>
+        </ul>
+      </section>
     </section>
   </main>
 
