--- a/charts/HeatMap/HeatMap.html
+++ b/charts/HeatMap/HeatMap.html
@@ -13,6 +13,7 @@
     <nav class="main-nav">
       <a href="../../index.html">Home Page</a>
       <a href="../StackedBarChart/StackedBarChart.html">Stacked Bar Chart</a>
+      <a href="../HeatMap/HeatMap.html" class="active">Heat Map</a>
       <a href="../BubbleChart/BubbleChart.html">Bubble Chart</a>
     </nav>
   </header>
@@ -60,6 +61,15 @@
         <li><strong>Months:</strong> Focus on particular months or seasonal patterns</li>
       </ul>
       <p>Hover over any cell to see detailed information about the number of fines issued. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+      
+      <section class="heatmap-storyboard">
+        <h3>Key Insights from the Heatmap</h3>
+        <ul>
+          <li><strong>NSW Dominates Fine Issuance:</strong> NSW (New South Wales) consistently issues the highest number of fines for mobile phone use while driving, as shown by the darkest shades across all months. This highlights NSW as the strictest enforcer among all jurisdictions.</li>
+          <li><strong>QLD Lacks Age Group Data:</strong> Queensland (QLD) does not have any fines attributed to specific age groups; all fines are recorded under the "Unknown" age group. This suggests either a data collection gap or a reporting issue for age group information in QLD.</li>
+          <li><strong>Police-Issued Fines Only in Some States:</strong> In ACT, NT, SA, and WA, all recorded fines are police-issued, with no camera-issued fines present in the data. This indicates that these jurisdictions rely solely on police enforcement for mobile phone use fines, unlike other states that utilize both detection methods.</li>
+        </ul>
+      </section>
     </section>
   </main>
 
