bubble size legend

--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -37,6 +37,8 @@
       </section>
     </section>
 
+    <div class="chart-legend-container" id="bubble-size-legend"></div>
+
     <section class="chart-description">
       <h2>Bubble Chart: Fines vs Road Deaths</h2>
       <p>This chart illustrates the relationship between the total number of fines issued per jurisdiction and road deaths. The bubble size represents the number of fines per 10,000 licensed drivers in each jurisdiction, providing a normalized view of enforcement intensity relative to the driving population.</p>
