--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -19,26 +19,6 @@
   </header>
 
   <main>
-    <section id="chart3" class="chart-container">
-      <section class="filters-container">
-        <div class="filter-dropdown">
-          <button class="filter-btn">
-            Age Groups <span>&#9660;</span>
-          </button>
-          <div class="dropdown-content" id="bubbleAgeGroupFilter"></div>
-        </div>
-        <div class="filter-dropdown">
-          <button class="filter-btn">
-            Detection Methods <span>&#9660;</span>
-          </button>
-          <div class="dropdown-content" id="bubbleDetectionMethodFilter"></div>
-        </div>
-        <button class="reset-filters-btn">Reset Filters</button>
-      </section>
-    </section>
-
-    <div class="chart-legend-container" id="bubble-size-legend"></div>
-
     <section class="chart-description">
       <h2>Bubble Chart: Fines vs Road Deaths</h2>
       <p>This chart illustrates the relationship between the total number of fines issued per jurisdiction and road deaths. The bubble size represents the number of fines per 10,000 licensed drivers in each jurisdiction, providing a normalized view of enforcement intensity relative to the driving population.</p>
@@ -57,17 +37,51 @@
         <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
       </ul>
       <p>Hover over any bubble to see detailed information about the jurisdiction, including road deaths, total fines, number of licenses, and fines per 10,000 drivers. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
-      
-      <section class="bubblechart-storyboard">
-        <h3>Key Insights from the Bubble Chart</h3>
-        <ul>
-          <li><strong>NSW: High Fines per Driver and High Road Deaths:</strong> NSW (New South Wales) stands out with the largest bubble, indicating the highest number of fines per 10,000 licenses. It also has a high number of road deaths, suggesting both strict enforcement and a significant road safety challenge.</li>
-          <li><strong>QLD and VIC: Many Road Deaths, Moderate Fines per Driver:</strong> Queensland (QLD) and Victoria (VIC) have high numbers of road deaths, but their bubble sizes are smaller than NSW, meaning they issue fewer fines per 10,000 licenses. This could indicate less strict enforcement or different driver behavior.</li>
-          <li><strong>Other States and Territories: Low Fines per Driver and Fewer Road Deaths:</strong> ACT, NT, SA, TAS, and WA have much smaller bubbles, reflecting both fewer road deaths and a lower rate of fines per 10,000 licenses. These regions may have smaller populations, less enforcement, or different reporting practices.</li>
-          <li><strong>No Direct Correlation:</strong> The chart does not show a direct relationship between road deaths and fines per 10,000 licenses. For example, QLD and VIC have similar road death numbers, but QLD has a slightly larger bubble, indicating a higher fine rate per driver.</li>
-          <li><strong>Bubble Size Interpretation:</strong> The size of each bubble is crucial: it normalizes fines by the number of licensed drivers, allowing for fairer comparison between jurisdictions of different sizes.</li>
-        </ul>
+    </section>
+
+    <section id="chart3" class="chart-container">
+      <section class="filters-container">
+        <div class="filter-dropdown">
+          <button class="filter-btn">
+            Age Groups <span>&#9660;</span>
+          </button>
+
+          <div class="dropdown-content" id="bubbleAgeGroupFilter"></div>
+        </div>
+
+        <div class="filter-dropdown">
+          <button class="filter-btn">
+            Detection Methods <span>&#9660;</span>
+          </button>
+
+          <div class="dropdown-content" id="bubbleDetectionMethodFilter"></div>
+        </div>
+        <button class="reset-filters-btn">Reset Filters</button>
       </section>
+    </section>
+
+    <div class="chart-legend-container" id="bubble-size-legend"></div>
+      
+    <section class="chart-description">
+      <h3>Key Insights from the Bubble Chart</h3>
+
+      <ul>
+        <li>
+          <strong>NSW: High Fines per Driver and High Road Deaths:</strong> NSW (New South Wales) stands out with the largest bubble, indicating the highest number of fines per 10,000 licenses. It also has a high number of road deaths, suggesting both strict enforcement and a significant road safety challenge.
+        </li>
+
+        <li>
+          <strong>QLD and VIC: Many Road Deaths, Moderate Fines per Driver:</strong> Queensland (QLD) and Victoria (VIC) have high numbers of road deaths, but their bubble sizes are smaller than NSW, meaning they issue fewer fines per 10,000 licenses. This could indicate less strict enforcement or different driver behavior.
+        </li>
+
+        <li>
+          <strong>Other States and Territories: Low Fines per Driver and Fewer Road Deaths:</strong> ACT, NT, SA, TAS, and WA have much smaller bubbles, reflecting both fewer road deaths and a lower rate of fines per 10,000 licenses. These regions may have smaller populations, less enforcement, or different reporting practices.
+        </li>
+
+        <li>
+          <strong>Bubble Size Interpretation:</strong> The size of each bubble is crucial: it normalizes fines by the number of licensed drivers, allowing for fairer comparison between jurisdictions of different sizes.
+        </li>
+      </ul>
     </section>
   </main>
 
