--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -88,6 +88,17 @@
   <script src="../../scripts/constants.js"></script>
   <script src="BubbleChart.js"></script>
   
-  <footer>@Data Visulisation</footer>
+  <footer>
+    <p>COS30045 (Data Visulisation) Project</p>
+
+    <p>
+      By <a href="https://github.com/DanNgo4" target="_blank">Dan Ngo</a> (Student ID: 104186810)
+    </p>
+
+    <p>
+      and <a href="https://github.com/ProfessorCalculus123" target="_blank">Dante Rosini</a> (Student ID: 105335972)
+    </p>
+  </footer>
+</body>
 </body>
 </html> 
