--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header>
     <h1>Fines For Mobile Phone Use 2023</h1>
+
     <nav class="main-nav">
       <a href="index.html" class="active">Home Page</a>
       
@@ -31,6 +32,7 @@
 
   <main class="main-content-area">
     <h2>Welcome to the Australian Mobile Phone Usage While Driving Dashboard</h2>
+
     <p>This dashboard provides comprehensive information on Australian drivers caught using their mobile phones in 2023. Through interactive visualizations, we explore key patterns and correlations in the data.</p>
     
     <h3>Key Insights You Can Explore:</h3>
@@ -43,7 +45,17 @@
     <p>Select a visualization from the navigation menu above to begin exploring the data.</p>
   </main>
   
-  <footer>@Data Visulisation</footer>
+  <footer>
+    <p>COS30045 (Data Visulisation) Project</p>
+
+    <p>
+      By <a href="https://github.com/DanNgo4" target="_blank">Dan Ngo</a> (Student ID: 104186810)
+    </p>
+
+    <p>
+      and <a href="https://github.com/ProfessorCalculus123" target="_blank">Dante Rosini</a> (Student ID: 105335972)
+    </p>
+  </footer>
 </body>
 
 </html>
