--- a/charts/StackedBarChart/StackedBarChart.html
+++ b/charts/StackedBarChart/StackedBarChart.html
@@ -30,7 +30,7 @@
         <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
         <li><strong>Jurisdictions:</strong> Select specific states or territories to compare</li>
       </ul>
-      
+
       <p>Use the "Reset Filters" button to clear all selections and return to the default view.</p>
     </section>
 
@@ -88,6 +88,17 @@
   <script src="../../scripts/constants.js"></script>
   <script src="StackedBarChart.js"></script>
   
-  <footer>@Data Visulisation</footer>
+  <footer>
+    <p>COS30045 (Data Visulisation) Project</p>
+
+    <p>
+      By <a href="https://github.com/DanNgo4" target="_blank">Dan Ngo</a> (Student ID: 104186810)
+    </p>
+
+    <p>
+      and <a href="https://github.com/ProfessorCalculus123" target="_blank">Dante Rosini</a> (Student ID: 105335972)
+    </p>
+  </footer>
+</body>
 </body>
 </html> 
