--- a/charts/BubbleChart/BubbleChart.html
+++ b/charts/BubbleChart/BubbleChart.html
@@ -10,33 +10,68 @@
 <body>
   <header>
     <h1>Fines For Mobile Phone Use 2023</h1>
+
     <nav class="main-nav">
-      <a href="../../index.html">Home Page</a>
-      <a href="../StackedBarChart/StackedBarChart.html">Stacked Bar Chart</a>
-      <a href="../HeatMap/HeatMap.html">Heat Map</a>
-      <a href="../BubbleChart/BubbleChart.html" class="active">Bubble Chart</a>
+      <a href="../../index.html">
+        Home Page
+      </a>
+      <a href="../StackedBarChart/StackedBarChart.html">
+        Stacked Bar Chart
+      </a>
+
+      <a href="../HeatMap/HeatMap.html">
+        Heat Map
+      </a>
+
+      <a href="../BubbleChart/BubbleChart.html" class="active">
+        Bubble Chart
+      </a>
     </nav>
   </header>
 
   <main>
     <section class="chart-description">
       <h2>Bubble Chart: Fines vs Road Deaths</h2>
-      <p>This chart illustrates the relationship between the total number of fines issued per jurisdiction and road deaths. The bubble size represents the number of fines per 10,000 licensed drivers in each jurisdiction, providing a normalized view of enforcement intensity relative to the driving population.</p>
+
+      <p>
+        This chart illustrates the relationship between the total number of fines issued per jurisdiction and road deaths. The bubble size represents the number of fines per 10,000 licensed drivers in each jurisdiction, providing a normalised view of enforcement intensity relative to the driving population.
+      </p>
       
       <h3>How to Read the Chart:</h3>
+
       <ul>
-        <li><strong>X-axis:</strong> Number of road deaths in each jurisdiction</li>
-        <li><strong>Y-axis:</strong> Total number of fines issued</li>
-        <li><strong>Bubble Size:</strong> Represents fines per 10,000 licensed drivers</li>
-        <li><strong>Bubble Color:</strong> Different colors represent different jurisdictions</li>
+        <li>
+          <strong>X-axis:</strong> Number of road deaths in each jurisdiction
+        </li>
+
+        <li>
+          <strong>Y-axis:</strong> Total number of fines issued
+        </li>
+
+        <li>
+          <strong>Bubble Size:</strong> Represents fines per 10,000 licensed drivers
+        </li>
+
+        <li>
+          <strong>Bubble Color:</strong> Different colours represent different jurisdictions
+        </li>
       </ul>
 
       <h3>How to Use the Filters:</h3>
+
       <ul>
-        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
-        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
+        <li>
+          <strong>Age Groups:</strong> Filter the data to focus on specific age demographics
+        </li>
+
+        <li>
+          <strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines, or both
+        </li>
       </ul>
-      <p>Hover over any bubble to see detailed information about the jurisdiction, including road deaths, total fines, number of licenses, and fines per 10,000 drivers. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+
+      <p>
+        Hover over any bubble to see detailed information about the jurisdiction, including road deaths, total fines, number of licenses, and fines per 10,000 drivers. Use the "Reset Filters" button to clear all selections and return to the default view.
+      </p>
     </section>
 
     <section id="chart3" class="chart-container">
@@ -56,6 +91,7 @@
 
           <div class="dropdown-content" id="bubbleDetectionMethodFilter"></div>
         </div>
+
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
@@ -76,10 +112,6 @@
 
         <li>
           <strong>Other States and Territories: Low Fines per Driver and Fewer Road Deaths:</strong> ACT, NT, SA, TAS, and WA have much smaller bubbles, reflecting both fewer road deaths and a lower rate of fines per 10,000 licenses. These regions may have smaller populations, less enforcement, or different reporting practices.
-        </li>
-
-        <li>
-          <strong>Bubble Size Interpretation:</strong> The size of each bubble is crucial: it normalizes fines by the number of licensed drivers, allowing for fairer comparison between jurisdictions of different sizes.
         </li>
       </ul>
     </section>
