--- a/charts/HeatMap/HeatMap.html
+++ b/charts/HeatMap/HeatMap.html
@@ -10,27 +10,57 @@
 <body>
   <header>
     <h1>Fines For Mobile Phone Use 2023</h1>
+
     <nav class="main-nav">
-      <a href="../../index.html">Home Page</a>
-      <a href="../StackedBarChart/StackedBarChart.html">Stacked Bar Chart</a>
-      <a href="../HeatMap/HeatMap.html" class="active">Heat Map</a>
-      <a href="../BubbleChart/BubbleChart.html">Bubble Chart</a>
+      <a href="../../index.html">
+        Home Page
+      </a>
+
+      <a href="../StackedBarChart/StackedBarChart.html">
+        Stacked Bar Chart
+      </a>
+
+      <a href="../HeatMap/HeatMap.html" class="active">
+        Heat Map
+      </a>
+
+      <a href="../BubbleChart/BubbleChart.html">
+        Bubble Chart
+      </a>
     </nav>
   </header>
 
   <main>
     <section class="chart-description">
       <h2>Heat Map: Monthly Fines Distribution</h2>
-      <p>This heat map displays the total number of fines issued per jurisdiction, by month, throughout 2023. The intensity of the color indicates the number of fines issued, with darker shades representing higher numbers. This visualization helps identify seasonal patterns and compare enforcement levels across different jurisdictions.</p>
+
+      <p>
+        This heat map displays the total number of fines issued per jurisdiction, by month, throughout 2023. The intensity of the color indicates the number of fines issued, with darker shades representing higher numbers. This visualization helps identify seasonal patterns and compare enforcement levels across different jurisdictions.
+      </p>
       
       <h3>How to Use the Filters:</h3>
+
       <ul>
-        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
-        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
-        <li><strong>Jurisdictions:</strong> Select specific states or territories to compare</li>
-        <li><strong>Months:</strong> Focus on particular months or seasonal patterns</li>
+        <li>
+          <strong>Age Groups:</strong> Filter the data to focus on specific age demographics
+        </li>
+
+        <li>
+          <strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines, or both
+        </li>
+
+        <li>
+          <strong>Jurisdictions:</strong> Select specific states to compare
+        </li>
+
+        <li>
+          <strong>Months:</strong> Select specific months to compare
+        </li>
       </ul>
-      <p>Hover over any cell to see detailed information about the number of fines issued. Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+
+      <p>
+        Hover over any cell to see detailed information about the number of fines issued. Use the "Reset Filters" button to clear all selections and return to the default view.
+      </p>
     </section>
 
     <section id="chart2" class="chart-container">
@@ -39,26 +69,34 @@
           <button class="filter-btn">
             Age Groups <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="heatmapAgeGroupFilter"></div>
         </div>
+
         <div class="filter-dropdown">
           <button class="filter-btn">
             Detection Methods <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="heatmapDetectionMethodFilter"></div>
         </div>
+
         <div class="filter-dropdown">
           <button class="filter-btn">
             Jurisdictions <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="heatmapJurisdictionFilter"></div>
         </div>
+
         <div class="filter-dropdown">
           <button class="filter-btn">
             Months <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="heatmapMonthFilter"></div>
         </div>
+
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
@@ -76,7 +114,11 @@
         </li>
 
         <li>
-          <strong>Police-Issued Fines Only in Some States:</strong> In ACT, NT, SA, and WA, all recorded fines are police-issued, with no camera-issued fines present in the data. This indicates that these jurisdictions rely solely on police enforcement for mobile phone use fines, unlike other states that utilize both detection methods.
+          <strong>Police-Issued Fines Only in Some States:</strong> In ACT, NT, SA, and WA, all recorded fines are police-issued, with no camera-issued fines present in the data. This indicates that these jurisdictions rely solely on police enforcement for mobile phone use fines, unlike other states that utilise both detection methods.
+        </li>
+
+        <li>
+          <strong>Seasonal Enforcement Trends:</strong> In Victoria and Tasmania, more fines were issued during the second half of the year compared to the first half. In contrast, New South Wales, Western Australia and South Australia show more fines issued in the first half of the year than in the second half.
         </li>
       </ul>
     </section>
