--- a/charts/StackedBarChart/StackedBarChart.html
+++ b/charts/StackedBarChart/StackedBarChart.html
@@ -10,28 +10,55 @@
 <body>
   <header>
     <h1>Fines For Mobile Phone Use 2023</h1>
+
     <nav class="main-nav">
-      <a href="../../index.html">Home Page</a>
-      <a href="../StackedBarChart/StackedBarChart.html" class="active">Stacked Bar Chart</a>
-      <a href="../HeatMap/HeatMap.html">Heat Map</a>
-      <a href="../BubbleChart/BubbleChart.html">Bubble Chart</a>
+      <a href="../../index.html">
+        Home Page
+      </a>
+
+      <a href="../StackedBarChart/StackedBarChart.html" class="active">
+        Stacked Bar Chart
+      </a>
+
+      <a href="../HeatMap/HeatMap.html">
+        Heat Map
+      </a>
+
+      <a href="../BubbleChart/BubbleChart.html">
+        Bubble Chart
+      </a>
     </nav>
   </header>
 
   <main>
     <section class="chart-description">
-      <h2>Stacked Bar Charts: Fines by Detection Method</h2>
-      <p>These two stacked bar graphs compare the number of fines issued per jurisdiction, broken down by detection method (camera-issued or police-issued). The visualization helps identify patterns in how different jurisdictions enforce mobile phone usage laws.</p>
+      <h2>
+        Stacked Bar Charts: Fines by Detection Method per Jurisdiction
+      </h2>
+
+      <p>
+        These two stacked bar graphs compare the number of fines issued per jurisdiction, broken down by detection method (camera-issued or police-issued). The visualisation helps identify patterns in how different jurisdictions enforce mobile phone usage laws.
+      </p>
       
       <h3>How to Use the Filters:</h3>
 
       <ul>
-        <li><strong>Age Groups:</strong> Filter the data to focus on specific age demographics</li>
-        <li><strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines</li>
-        <li><strong>Jurisdictions:</strong> Select specific states or territories to compare</li>
+        <li>
+          <strong>Age Groups:</strong> Filter the data to focus on specific age demographics
+        </li>
+
+        <li>
+          <strong>Detection Methods:</strong> Toggle between camera-issued and police-issued fines, or both
+        </li>
+
+        <li>
+          <strong>Jurisdictions:</strong> Select specific states to compare
+        </li>
       </ul>
 
-      <p>Use the "Reset Filters" button to clear all selections and return to the default view.</p>
+      <p>
+        Hover over any bar to see detailed information about the number of fines issued in each jurisdiction. Use the "Reset Filters" button to clear all selections and return to the default view.
+      </p>
     </section>
 
     <section id="chart1" class="chart-container">
@@ -40,20 +67,26 @@
           <button class="filter-btn">
             Age Groups <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="ageGroupFilter"></div>
         </div>
+
         <div class="filter-dropdown">
           <button class="filter-btn">
             Detection Methods <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="detectionMethodFilter"></div>
         </div>
+
         <div class="filter-dropdown">
           <button class="filter-btn">
             Jurisdictions <span>&#9660;</span>
           </button>
+
           <div class="dropdown-content" id="jurisdictionFilter"></div>
         </div>
+
         <button class="reset-filters-btn">Reset Filters</button>
       </section>
     </section>
@@ -71,11 +104,7 @@
         </li>
 
         <li>
-          <strong>Age Group Distribution:</strong> The filters allow you to see how fines are distributed across different age groups. If you select/deselect age groups, you can observe which age groups are most frequently fined in each jurisdiction.
-        </li>
-
-        <li>
-          <strong>Stacked Bar Comparison:</strong> The stacked bars make it easy to compare not just the total number of fines, but also the breakdown by detection method within each jurisdiction. For example, you can see if a jurisdiction relies more on cameras or police for issuing fines.
+          <strong>Age Group Distribution:</strong> For different reasons, some states have records of fines issued to unknown age groups, especially in QLD, where all fines are recorded under the "Unknown" age group.
         </li>
 
         <li>
