legend for bar chart

--- a/charts/StackedBarChart/StackedBarChart.html
+++ b/charts/StackedBarChart/StackedBarChart.html
@@ -91,6 +91,20 @@
       </section>
     </section>
 
+    <div class="bar-legend">
+      <p class="legend-item">
+        <span class="legend-color-box camera-color"></span>
+
+        Camera issued
+      </p>
+
+      <p class="legend-item">
+        <span class="legend-color-box police-color"></span>
+
+        Police issued
+      </p>
+    </div>
+
     <section class="chart-description">
       <h3>Key Insights from the Stacked Bar Chart:</h3>
 
